wxc/include/ewxw/wxc_glue.h

/* wxImageHandler */
TClassDefExtend(wxImageHandler,wxObject)

/* wxImageList */
TClassDefExtend(wxImageList,wxObject)
int        wxImageList_AddBitmap( TSelf(wxImageList) _obj, TClass(wxBitmap) bitmap, TClass(wxBitmap) mask );
int        wxImageList_AddIcon( TSelf(wxImageList) _obj, TClass(wxIcon) icon );
int        wxImageList_AddMasked( TSelf(wxImageList) _obj, TClass(wxBitmap) bitmap, TClass(wxColour) maskColour );
TClass(wxImageList) wxImageList_Create( TSize(width,height), TBoolInt mask, int initialCount );
void       wxImageList_Delete( TSelf(wxImageList) _obj );
TBoolInt   wxImageList_Draw( TSelf(wxImageList) _obj, int index, TClass(wxDC) dc, TPoint(x,y), int flags, TBoolInt solidBackground );
int        wxImageList_GetImageCount( TSelf(wxImageList) _obj );
void       wxImageList_GetSize( TSelf(wxImageList) _obj, int index, TSizeOut(width,height) );
TBoolInt   wxImageList_Remove( TSelf(wxImageList) _obj, int index );
TBoolInt   wxImageList_RemoveAll( TSelf(wxImageList) _obj );
TBoolInt   wxImageList_Replace( TSelf(wxImageList) _obj, int index, TClass(wxBitmap) bitmap, TClass(wxBitmap) mask );
TBoolInt   wxImageList_ReplaceIcon( TSelf(wxImageList) _obj, int index, TClass(wxIcon) icon );